--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,35 +8,33 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Functional Suite</th></tr>
-<tr><td><a href="#t0">Login Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">71</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Validate Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">28</td><td></td><td></td></tr>
-<tr><td><a href="#t2">Dependency Test</a></td><td class="num">2</td><td class="num attn">1</td><td class="num attn">1</td><td class="num">33</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t3">Failure Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">26</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">4</th><th class="num attn">1</th><th class="num attn">3</th><th class="num">158</th><th colspan="2"></th></tr>
+<tr><th colspan="7">TestNG Listeners</th></tr>
+<tr><td><a href="#t0">Login Test</a></td><td class="num">0</td><td class="num attn">1</td><td class="num">0</td><td class="num">46</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Functional Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testcases.TestCase1</td><td><a href="#m0">doLogin</a></td><td rowspan="1">1594440473784</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m1">doUserReg</a></td><td rowspan="1">1594440473753</td><td rowspan="1">9</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Validate Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.TestCase2</td><td><a href="#m2">validateTitles</a></td><td rowspan="1">1594440474110</td><td rowspan="1">13</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">Dependency Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.TestCase3</td><td><a href="#m3">doUserReg</a></td><td rowspan="1">1594440474177</td><td rowspan="1">7</td></tr><tr><th colspan="4">Dependency Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">testcases.TestCase3</td><td><a href="#m4">doLogin</a></td><td rowspan="1">1594440474189</td><td rowspan="1">0</td></tr><tr><th colspan="4">Dependency Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testcases.TestCase3</td><td><a href="#m5">fourthTest</a></td><td rowspan="1">1594440474202</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m6">thirdTest</a></td><td rowspan="1">1594440474194</td><td rowspan="1">5</td></tr></tbody>
-<tbody id="t3"><tr><th colspan="4">Failure Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.TestFailure</td><td><a href="#m7">doLogin</a></td><td rowspan="1">1594440474245</td><td rowspan="1">14</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">TestNG Listeners</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login Test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">testNGListenerOnFailure.LoginTest</td><td><a href="#m0">setUp</a></td><td rowspan="1">1594461730730</td><td rowspan="1">642</td></tr><tr><th colspan="4">Login Test &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="1">testNGListenerOnFailure.LoginTest</td><td><a href="#m1">tearDown</a></td><td rowspan="1">1594461731829</td><td rowspan="1">0</td></tr><tr><th colspan="4">Login Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">testNGListenerOnFailure.LoginTest</td><td><a href="#m2">doLogin</a></td><td rowspan="1">1594461731417</td><td rowspan="1">0</td></tr></tbody>
 </table>
-<h2>Login Test</h2><h3 id="m0">testcases.TestCase1#doLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testcases.TestCase1#doUserReg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Validate Test</h2><h3 id="m2">testcases.TestCase2#validateTitles</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a><br/><br><br/><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img height= 200 width = 200 src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	expected [Yahoo.com] but found [Gmail.com],
-	Image not present. expected [false] but found [true],
-	Text box not present. expected [false] but found [true]
-	at testcases.TestCase2.validateTitles(TestCase2.java:42)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Dependency Test</h2><h3 id="m3">testcases.TestCase3#doUserReg</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a><br/><br><br/><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img height= 200 width = 200 src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: User is not registered successfully.
-	at testcases.TestCase3.doUserReg(TestCase3.java:11)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">testcases.TestCase3#doLogin</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method TestCase3.doLogin()[pri:2, instance:testcases.TestCase3@3b35a229] depends on not successfully finished methods
-... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">testcases.TestCase3#fourthTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">testcases.TestCase3#thirdTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Failure Test</h2><h3 id="m7">testcases.TestFailure#doLogin</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a><br/><br><br/><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img height= 200 width = 200 src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Failing the Login Test
-	at testcases.TestFailure.doLogin(TestFailure.java:10)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Login Test</h2><h3 id="m0">testNGListenerOnFailure.LoginTest#setUp</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalStateException: The path to the driver executable must be set by the webdriver.gecko.driver system property; for more information, see https://github.com/mozilla/geckodriver. The latest version can be downloaded from https://github.com/mozilla/geckodriver/releases
+	at com.google.common.base.Preconditions.checkState(Preconditions.java:843)
+	at org.openqa.selenium.remote.service.DriverService.findExecutable(DriverService.java:134)
+	at org.openqa.selenium.firefox.GeckoDriverService.access$100(GeckoDriverService.java:44)
+	at org.openqa.selenium.firefox.GeckoDriverService$Builder.findDefaultExecutable(GeckoDriverService.java:167)
+	at org.openqa.selenium.remote.service.DriverService$Builder.build(DriverService.java:355)
+	at org.openqa.selenium.firefox.FirefoxDriver.toExecutor(FirefoxDriver.java:190)
+	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:147)
+	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:125)
+	at testNGListenerOnFailure.TestBase.setUp(TestBase.java:17)
+... Removed 20 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testNGListenerOnFailure.LoginTest#tearDown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testNGListenerOnFailure.LoginTest#doLogin</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalStateException: The path to the driver executable must be set by the webdriver.gecko.driver system property; for more information, see https://github.com/mozilla/geckodriver. The latest version can be downloaded from https://github.com/mozilla/geckodriver/releases
+	at com.google.common.base.Preconditions.checkState(Preconditions.java:843)
+	at org.openqa.selenium.remote.service.DriverService.findExecutable(DriverService.java:134)
+	at org.openqa.selenium.firefox.GeckoDriverService.access$100(GeckoDriverService.java:44)
+	at org.openqa.selenium.firefox.GeckoDriverService$Builder.findDefaultExecutable(GeckoDriverService.java:167)
+	at org.openqa.selenium.remote.service.DriverService$Builder.build(DriverService.java:355)
+	at org.openqa.selenium.firefox.FirefoxDriver.toExecutor(FirefoxDriver.java:190)
+	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:147)
+	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:125)
+	at testNGListenerOnFailure.TestBase.setUp(TestBase.java:17)
+... Removed 20 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
