--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-TestNG_Listeners" class="navigator-link">
-              <span class="suite-name border-skipped">TestNG Listeners</span>
+              <span class="suite-name border-failed">TestNG Listeners</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,21 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,  1 skipped,  </span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title skipped">Skipped methods</span>
-                    <span class="show-or-hide-methods skipped">
-                      <a href="#" panel-name="suite-TestNG_Listeners" class="hide-methods skipped suite-TestNG_Listeners"> (hide)</a> <!-- hide-methods skipped suite-TestNG_Listeners -->
-                      <a href="#" panel-name="suite-TestNG_Listeners" class="show-methods skipped suite-TestNG_Listeners"> (show)</a> <!-- show-methods skipped suite-TestNG_Listeners -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-TestNG_Listeners" class="hide-methods failed suite-TestNG_Listeners"> (hide)</a> <!-- hide-methods failed suite-TestNG_Listeners -->
+                      <a href="#" panel-name="suite-TestNG_Listeners" class="show-methods failed suite-TestNG_Listeners"> (show)</a> <!-- show-methods failed suite-TestNG_Listeners -->
                     </span>
-                    <div class="method-list-content skipped suite-TestNG_Listeners">
+                    <div class="method-list-content failed suite-TestNG_Listeners">
                       <span>
-                        <img src="skipped.png" width="3%"/>
+                        <img src="failed.png" width="3%"/>
                         <a href="#" panel-name="suite-TestNG_Listeners" title="testNGListenerOnFailure.LoginTest" class="method navigator-link" hash-for-method="doLogin">doLogin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content skipped suite-TestNG_Listeners -->
+                    </div> <!-- method-list-content failed suite-TestNG_Listeners -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -117,9 +117,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-TestNG_Listeners" class="panel TestNG_Listeners">
-          <div class="suite-TestNG_Listeners-class-skipped">
+          <div class="suite-TestNG_Listeners-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="skipped.png"/>
+              <img src="failed.png"/>
               <span class="class-name">testNGListenerOnFailure.LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -128,22 +128,14 @@
                   <a name="doLogin">
                   </a> <!-- doLogin -->
                   <span class="method-name">doLogin</span>
-                  <div class="stack-trace">java.lang.IllegalStateException: The path to the driver executable must be set by the webdriver.gecko.driver system property; for more information, see https://github.com/mozilla/geckodriver. The latest version can be downloaded from https://github.com/mozilla/geckodriver/releases
-	at com.google.common.base.Preconditions.checkState(Preconditions.java:843)
-	at org.openqa.selenium.remote.service.DriverService.findExecutable(DriverService.java:134)
-	at org.openqa.selenium.firefox.GeckoDriverService.access$100(GeckoDriverService.java:44)
-	at org.openqa.selenium.firefox.GeckoDriverService$Builder.findDefaultExecutable(GeckoDriverService.java:167)
-	at org.openqa.selenium.remote.service.DriverService$Builder.build(DriverService.java:355)
-	at org.openqa.selenium.firefox.FirefoxDriver.toExecutor(FirefoxDriver.java:190)
-	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:147)
-	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:125)
-	at testNGListenerOnFailure.TestBase.setUp(TestBase.java:17)
-... Removed 20 stack frames
+                  <div class="stack-trace">java.lang.NullPointerException
+	at testNGListenerOnFailure.LoginTest.doLogin(LoginTest.java:11)
+... Removed 25 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-TestNG_Listeners-class-skipped -->
+          </div> <!-- suite-TestNG_Listeners-class-failed -->
         </div> <!-- panel TestNG_Listeners -->
         <div panel-name="test-xml-TestNG_Listeners" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -200,12 +192,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'doLogin')
 data.setCell(0, 2, 'testNGListenerOnFailure.LoginTest')
-data.setCell(0, 3, 0);
+data.setCell(0, 3, 18);
 window.suiteTableData['TestNG_Listeners']= { tableData: data, tableDiv: 'times-div-TestNG_Listeners'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 0 ms</span>
+              <span class="suite-total-time">Total running time: 18 ms</span>
               <div id="times-div-TestNG_Listeners">
               </div> <!-- times-div-TestNG_Listeners -->
             </div> <!-- times-div -->
@@ -232,16 +224,22 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">testNGListenerOnFailure.LoginTest</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">doLogin</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
               <div class="configuration-suite before">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">doLogin</span>
+                <span class="method-start">23268 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-suite after">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">tearDown</span>
+                <span class="method-start">23442 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
