--- a/test-output/old/TestNG Listeners/methods.html
+++ b/test-output/old/TestNG Listeners/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestNG Listeners</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a47576">  <td>20/07/11 18:02:10</td>   <td>0</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:testNGListenerOnFailure.LoginTest@76b1e9b8]">&gt;&gt;setUp</td> 
+<tr bgcolor="a47576">  <td>20/07/11 19:00:44</td>   <td>0</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:testNGListenerOnFailure.LoginTest@76b1e9b8]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1401316767</td>   <td></td> </tr>
-<tr bgcolor="92827e">  <td>20/07/11 18:02:11</td>   <td>679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.doLogin()[pri:0, instance:testNGListenerOnFailure.LoginTest@76b1e9b8]">doLogin</td> 
+<tr bgcolor="92827e">  <td>20/07/11 19:01:07</td>   <td>23255</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.doLogin()[pri:0, instance:testNGListenerOnFailure.LoginTest@76b1e9b8]">doLogin</td> 
   <td>main@1401316767</td>   <td></td> </tr>
+<tr bgcolor="a47576">  <td>20/07/11 19:01:07</td>   <td>23429</td> <td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:testNGListenerOnFailure.LoginTest@76b1e9b8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1401316767</td>   <td></td> </tr>
 </table>
