--- a/test-output/old/TestNG Listeners/methods.html
+++ b/test-output/old/TestNG Listeners/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestNG Listeners</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a47576">  <td>20/07/12 13:14:44</td>   <td>0</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:testNGListenerOnFailure.LoginTest@27406a17]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@335708295</td>   <td></td> </tr>
-<tr bgcolor="92827e">  <td>20/07/12 13:14:54</td>   <td>10610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.doLogin()[pri:0, instance:testNGListenerOnFailure.LoginTest@27406a17]">doLogin</td> 
-  <td>main@335708295</td>   <td></td> </tr>
-<tr bgcolor="a47576">  <td>20/07/12 13:14:58</td>   <td>14020</td> <td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:testNGListenerOnFailure.LoginTest@27406a17]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@335708295</td>   <td></td> </tr>
+<tr bgcolor="ddbd7e">  <td>20/07/12 16:22:17</td>   <td>0</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:testNGListenerOnFailure.LoginTest@248e319b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
+<tr bgcolor="9aafa1">  <td>20/07/12 16:22:38</td>   <td>20524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.doLogin()[pri:0, instance:testNGListenerOnFailure.LoginTest@248e319b]">doLogin</td> 
+  <td>main@480903748</td>   <td></td> </tr>
+<tr bgcolor="ddbd7e">  <td>20/07/12 16:22:53</td>   <td>35595</td> <td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:testNGListenerOnFailure.LoginTest@248e319b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
 </table>
