--- a/test-output/old/TestNG Listeners/methods.html
+++ b/test-output/old/TestNG Listeners/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestNG Listeners</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ddbd7e">  <td>20/07/12 17:31:21</td>   <td>0</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:testNGListenerOnFailure.LoginTest@5d0bf09b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2095064787</td>   <td></td> </tr>
-<tr bgcolor="9aafa1">  <td>20/07/12 17:31:32</td>   <td>10989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.doLogin()[pri:1, instance:testNGListenerOnFailure.LoginTest@5d0bf09b]">doLogin</td> 
-  <td>main@2095064787</td>   <td></td> </tr>
-<tr bgcolor="9aafa1">  <td>20/07/12 17:31:46</td>   <td>24525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.composeEmail()[pri:2, instance:testNGListenerOnFailure.LoginTest@5d0bf09b]">composeEmail</td> 
-  <td>main@2095064787</td>   <td></td> </tr>
-<tr bgcolor="ddbd7e">  <td>20/07/12 17:31:46</td>   <td>24955</td> <td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:testNGListenerOnFailure.LoginTest@5d0bf09b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2095064787</td>   <td></td> </tr>
+<tr bgcolor="ffa36b">  <td>20/07/12 23:18:01</td>   <td>0</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:testNGListenerOnFailure.LoginTest@2a4f8009]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@766599024</td>   <td></td> </tr>
+<tr bgcolor="d96166">  <td>20/07/12 23:18:24</td>   <td>23260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.doLogin()[pri:1, instance:testNGListenerOnFailure.LoginTest@2a4f8009]">doLogin</td> 
+  <td>main@766599024</td>   <td></td> </tr>
+<tr bgcolor="d96166">  <td>20/07/12 23:18:39</td>   <td>37742</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.composeEmail()[pri:2, instance:testNGListenerOnFailure.LoginTest@2a4f8009]">composeEmail</td> 
+  <td>main@766599024</td>   <td></td> </tr>
+<tr bgcolor="ffa36b">  <td>20/07/12 23:18:59</td>   <td>58264</td> <td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:testNGListenerOnFailure.LoginTest@2a4f8009]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@766599024</td>   <td></td> </tr>
 </table>
