--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods, 1 failed,  1 skipped,  1 passed</span>
+                    <span class="method-stats">4 methods, 1 failed,  2 skipped,  1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -114,6 +114,11 @@
                       <a href="#" panel-name="suite-Suite1" class="show-methods skipped suite-Suite1"> (show)</a> <!-- show-methods skipped suite-Suite1 -->
                     </span>
                     <div class="method-list-content skipped suite-Suite1">
+                      <span>
+                        <img src="skipped.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite1" title="retry.TestLogin" class="method navigator-link" hash-for-method="registerUsers">registerUsers</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="skipped.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite1" title="retry.TestLogin" class="method navigator-link" hash-for-method="registerUsers">registerUsers</a> <!-- method navigator-link -->
@@ -170,6 +175,17 @@
               <span class="class-name">retry.TestLogin</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="registerUsers">
+                  </a> <!-- registerUsers -->
+                  <span class="method-name">registerUsers</span>
+                  <div class="stack-trace">java.lang.AssertionError: Execution Failed While Registering a User
+	at retry.TestLogin.registerUsers(TestLogin.java:18)
+... Removed 26 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="registerUsers">
@@ -253,24 +269,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'doLogin')
 data.setCell(0, 2, 'retry.TestLogin')
-data.setCell(0, 3, 24);
+data.setCell(0, 3, 16);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'registerUsers')
 data.setCell(1, 2, 'retry.TestLogin')
-data.setCell(1, 3, 6);
+data.setCell(1, 3, 3);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'registerUsers')
 data.setCell(2, 2, 'retry.TestLogin')
-data.setCell(2, 3, 4);
+data.setCell(2, 3, 2);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'registerUsers')
+data.setCell(3, 2, 'retry.TestLogin')
+data.setCell(3, 3, 2);
 window.suiteTableData['Suite1']= { tableData: data, tableDiv: 'times-div-Suite1'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 34 ms</span>
+              <span class="suite-total-time">Total running time: 23 ms</span>
               <div id="times-div-Suite1">
               </div> <!-- times-div-Suite1 -->
             </div> <!-- times-div -->
@@ -303,13 +323,17 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">registerUsers</span>
-                <span class="method-start">35 ms</span>
+                <span class="method-start">21 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">registerUsers</span>
+                <span class="method-start">30 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">registerUsers</span>
-                <span class="method-start">54 ms</span>
+                <span class="method-start">36 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
